[package]
name = "roll"
version = "0.1.0"
authors = ["Oliver Kovacs <oliver.kovacs.dev@gmail.com>"]
edition = "2021"
description = "Roll a dice"
readme = "README.md"
repository = "https://github.com/OliverKovacs/roll"
license = "MIT"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"
